--- a/src/scotch-night-web/src/app/styles/modal.scss
+++ b/src/scotch-night-web/src/app/styles/modal.scss
@@ -15,8 +15,8 @@
         background-color: #fff;
         border: 1px solid #333;
         border-radius: .25rem;
-        max-width: 90%;
-        min-width: 90%;
+        width: 90%;
+        max-width: 650px;
     }
 
     &.open {
